Fix mappings object